--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,14 @@
     <title>Soundify</title>
 </head>
 <body>
-    <div id="container">
 
-    </div>
+    <div id="container"></div>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <script>
+        window.onSpotifyWebPlaybackSDKReady = () => {
+            window.Spotify = Spotify;
+        }
+    </script>
 </body>
 </html>
+
